tests/expectations/compiler/core/algorithms/poseidon8_hash_to_field.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:24
     |
  28 |         let a: field = Poseidon8::hash_to_field(addr_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:24
     |
  29 |         let b: field = Poseidon8::hash_to_field(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:24
     |
  30 |         let c: field = Poseidon8::hash_to_field(field_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:24
     |
  31 |         let d: field = Poseidon8::hash_to_field(group_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:24
     |
  32 |         let e: field = Poseidon8::hash_to_field(i8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:24
     |
  33 |         let f: field = Poseidon8::hash_to_field(i16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:24
     |
  34 |         let g: field = Poseidon8::hash_to_field(i32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:24
     |
  35 |         let h: field = Poseidon8::hash_to_field(i64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:24
     |
  36 |         let i: field = Poseidon8::hash_to_field(i128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:24
     |
  37 |         let j: field = Poseidon8::hash_to_field(u8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:24
     |
  38 |         let k: field = Poseidon8::hash_to_field(u16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:24
     |
  39 |         let l: field = Poseidon8::hash_to_field(u32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:24
     |
  40 |         let m: field = Poseidon8::hash_to_field(u64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:24
     |
  41 |         let n: field = Poseidon8::hash_to_field(u128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:24
     |
  42 |         let o: field = Poseidon8::hash_to_field(scalar_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:24
     |
  44 |         let q: field = Poseidon8::hash_to_field(Foo { a: 1u128, b: 1u128 });
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.psd8 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as field;
    hash.psd8 true into r9 as field;
    hash.psd8 1field into r10 as field;
    hash.psd8 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as field;
    hash.psd8 r0 into r12 as field;
    hash.psd8 r1 into r13 as field;
    hash.psd8 r2 into r14 as field;
    hash.psd8 r3 into r15 as field;
    hash.psd8 1i128 into r16 as field;
    hash.psd8 r4 into r17 as field;
    hash.psd8 r5 into r18 as field;
    hash.psd8 r6 into r19 as field;
    hash.psd8 r7 into r20 as field;
    hash.psd8 1u128 into r21 as field;
    hash.psd8 1scalar into r22 as field;
    output r8 as field.private;
    output r9 as field.private;
    output r10 as field.private;
    output r11 as field.private;
    output r12 as field.private;
    output r13 as field.private;
    output r14 as field.private;
    output r15 as field.private;
    output r16 as field.private;
    output r17 as field.private;
    output r18 as field.private;
    output r19 as field.private;
    output r20 as field.private;
    output r21 as field.private;
    output r22 as field.private;
    output 6282138874775215908642068428229101707688352770499623918583921942230251255959field as field.private;
>>>>>>> mainnet
